Added Entity, service and controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#Compulsary properties
 
+spring.datasource.url = jdbc:mysql://localhost:3306/learn
+spring.datasource.username= root
+spring.datasource.password= p@ssw0rd
+
+#Optional hibernate properties
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
